--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,23 @@ body{
     margin: 10px 15px 15px 15px;
     color: black;
 }
+
+ion-icon {
+    font-size: 20px;
+  }
+
+  .card-detail{
+      border-color: white;
+  }
+  
+  a:hover{
+      text-decoration: none;
+  }
+
+  details{
+      margin-bottom: 25px;
+  }
+
+  video{
+      margin-left: 15px;
+  }
